[tool.poetry]
name = "course-bundle-system"
version = "0.1.0"
description = ""
authors = ["Michal Piotrowski <piotrowskimichalwfis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
